// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal all options renders 1`] = `
<body
  data-scroll-locked="1"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      data-testid="event-trap"
    />
  </div>
  <div
    class="fixed top bottom left right bg-darken50 "
    data-state="open"
    data-testid="modal-overlay"
    style="pointer-events: auto; display: grid; overflow-y: auto; place-items: start center; z-index: auto;"
  >
    <div
      aria-describedby="radix-_r_17_"
      aria-labelledby="radix-_r_16_"
      class="relative my120 wmax360 w-11/12 bg-white round "
      data-state="open"
      id="radix-_r_15_"
      role="dialog"
      style="pointer-events: auto;"
      tabindex="-1"
    >
      <span
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        <h2
          id="radix-_r_16_"
        >
          All options
        </h2>
        <p
          id="radix-_r_17_"
        >
          All options description
        </p>
      </span>
      <div>
        <div
          class="mb12"
        >
          I am a message
        </div>
        <button
          aria-label="press me"
          class="btn"
          id="foo"
        >
          press me
        </button>
      </div>
      <button
        aria-label="Close"
        class="btn btn--transparent unround-t unround-br color-gray py12 px12 absolute top right"
        data-state="closed"
        data-testid="modal-close"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="events-none icon"
          data-testid="icon-close"
          focusable="false"
          style="width: 18px; height: 18px;"
        >
          <use
            xlink:href="#icon-close"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
        >
          close
        </span>
      </button>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`Modal basic renders 1`] = `
<body
  data-scroll-locked="2"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      data-testid="event-trap"
    />
  </div>
  <div
    aria-hidden="true"
    class="fixed top bottom left right bg-darken50 "
    data-aria-hidden="true"
    data-state="open"
    data-testid="modal-overlay"
    style="pointer-events: auto; display: grid; overflow-y: auto; place-items: start center; z-index: auto;"
  >
    <div
      aria-describedby="radix-_r_2_"
      aria-labelledby="radix-_r_1_"
      class="relative my12 my60-mm wmax360 w-11/12 bg-white round  px36 py36"
      data-state="open"
      id="radix-_r_0_"
      role="dialog"
      style="pointer-events: none;"
      tabindex="-1"
    >
      <span
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        <h2
          id="radix-_r_1_"
        >
          No onExit passed as prop
        </h2>
        <p
          id="radix-_r_2_"
        >
          No onExit description
        </p>
      </span>
      <div>
        You can't close me
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      data-testid="event-trap"
    />
  </div>
  <div
    class="fixed top bottom left right bg-darken50 "
    data-state="open"
    data-testid="modal-overlay"
    style="pointer-events: auto; display: grid; overflow-y: auto; place-items: start center; z-index: auto;"
  >
    <div
      aria-describedby="radix-_r_5_"
      aria-labelledby="radix-_r_4_"
      class="relative my12 my60-mm wmax360 w-11/12 bg-white round  px36 py36"
      data-state="open"
      id="radix-_r_3_"
      role="dialog"
      style="pointer-events: auto;"
      tabindex="-1"
    >
      <span
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        <h2
          id="radix-_r_4_"
        >
          Small modal title
        </h2>
        <p
          id="radix-_r_5_"
        >
          Small modal description
        </p>
      </span>
      <div>
        Content
      </div>
      <div
        class="mt24"
      >
        <div
          class="flex flex--center-main flex--center-cross flex--row-reverse flex--wrap"
        >
          <div
            class="flex-child-no-shrink"
          >
            <button
              aria-label="Okay"
              class="btn btn--blue round-full py6 px24 txt-s"
              tabindex="0"
              type="button"
            >
              Okay
            </button>
          </div>
        </div>
      </div>
      <button
        aria-label="Close"
        class="btn btn--transparent unround-t unround-br color-gray py12 px12 absolute top right"
        data-state="closed"
        data-testid="modal-close"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="events-none icon"
          data-testid="icon-close"
          focusable="false"
          style="width: 18px; height: 18px;"
        >
          <use
            xlink:href="#icon-close"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
        >
          close
        </span>
      </button>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`Modal basic, auto renders 1`] = `
<body
  data-scroll-locked="1"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      data-testid="event-trap"
    />
  </div>
  <div
    class="fixed top bottom left right bg-darken50 "
    data-state="open"
    data-testid="modal-overlay"
    style="pointer-events: auto; display: grid; overflow-y: auto; place-items: start center; z-index: auto;"
  >
    <div
      aria-describedby="radix-_r_v_"
      aria-labelledby="radix-_r_u_"
      class="relative my12 my60-mm wmax-full bg-white round  px36 py36"
      data-state="open"
      id="radix-_r_t_"
      role="dialog"
      style="pointer-events: auto;"
      tabindex="-1"
    >
      <span
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        <h2
          id="radix-_r_u_"
        >
          Auto modal title
        </h2>
        <p
          id="radix-_r_v_"
        >
          Auto modal description
        </p>
      </span>
      <div>
        No fixed width on the modal container. But very tall.
      </div>
      <button
        aria-describedby="radix-_r_10_"
        aria-label="Close"
        class="btn btn--transparent unround-t unround-br color-gray py12 px12 absolute top right"
        data-state="instant-open"
        data-testid="modal-close"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="events-none icon"
          data-testid="icon-close"
          focusable="false"
          style="width: 18px; height: 18px;"
        >
          <use
            xlink:href="#icon-close"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
        >
          close
        </span>
      </button>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate(0, -200%); min-width: max-content; --radix-popper-transform-origin:  ;"
  >
    <div
      class="bg-white border--white color-text border round txt-s px12 py6 wmax240"
      data-align="center"
      data-side="top"
      data-state="instant-open"
      style="pointer-events: auto; filter: drop-shadow(0 0 4px rgba(14, 33, 39, 0.25)); --radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); --radix-tooltip-content-available-width: var(--radix-popper-available-width); --radix-tooltip-content-available-height: var(--radix-popper-available-height); --radix-tooltip-trigger-width: var(--radix-popper-anchor-width); --radix-tooltip-trigger-height: var(--radix-popper-anchor-height); animation: none;"
    >
      Close
      <span
        style="position: absolute; bottom: 0px; transform: translateY(100%); visibility: hidden;"
      >
        <svg
          fill="#fff"
          height="6"
          offset="6"
          preserveAspectRatio="none"
          style="display: block;"
          viewBox="0 0 30 10"
          width="12"
        >
          <polygon
            points="0,0 30,0 15,10"
          />
        </svg>
      </span>
      <span
        id="radix-_r_10_"
        role="tooltip"
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        Close
      </span>
    </div>
  </div>
</body>
`;

exports[`Modal basic, large renders 1`] = `
<body
  data-scroll-locked="1"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      data-testid="event-trap"
    />
  </div>
  <div
    class="fixed top bottom left right bg-darken50 "
    data-state="open"
    data-testid="modal-overlay"
    style="pointer-events: auto; display: grid; overflow-y: auto; place-items: start center; z-index: auto;"
  >
    <div
      aria-describedby="radix-_r_n_"
      aria-labelledby="radix-_r_m_"
      class="relative my12 my60-mm wmax600 w-11/12 bg-white round  px36 py36"
      data-state="open"
      id="radix-_r_l_"
      role="dialog"
      style="pointer-events: auto;"
      tabindex="-1"
    >
      <span
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        <h2
          id="radix-_r_m_"
        >
          Large modal title
        </h2>
        <p
          id="radix-_r_n_"
        >
          Large modal description
        </p>
      </span>
      <div>
        Large modal body
      </div>
      <div
        class="mt24"
      >
        <div
          class="flex flex--center-main flex--center-cross flex--row-reverse flex--wrap"
        >
          <div
            class="flex-child-no-shrink"
          >
            <button
              aria-label="Okay"
              class="btn btn--red round-full py6 px24 txt-s"
              tabindex="0"
              type="button"
            >
              Okay
            </button>
          </div>
          <div
            class="flex-child-no-shrink mr12"
          >
            <button
              aria-label="Cancel"
              class="btn btn--gray btn--stroke round-full py6 px24 txt-s"
              type="button"
            >
              Cancel
            </button>
          </div>
          <div
            class="flex-child-no-shrink mr12"
          >
            <button
              aria-label="tertiary"
              class="btn btn--transparent link link--gray transition round-full py12 px24 txt-s"
              type="button"
            >
              Give up
            </button>
          </div>
        </div>
      </div>
      <button
        aria-label="Close"
        class="btn btn--transparent unround-t unround-br color-gray py12 px12 absolute top right"
        data-state="closed"
        data-testid="modal-close"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="events-none icon"
          data-testid="icon-close"
          focusable="false"
          style="width: 18px; height: 18px;"
        >
          <use
            xlink:href="#icon-close"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
        >
          close
        </span>
      </button>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;
